--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,4 +1,5 @@
-<h1> おすすめボカロ曲診断 </h1>
+<h1 class="title"> おすすめボカロ曲診断 </h1>
+<div class="text_scale2">
 <h4> このサイトについて </h4>
 <p> このサイトは自分の好みに合ったボカロ曲を見つけるためのサイトです。 </p>
 <h4> 使い方 </h4>
@@ -19,4 +20,5 @@
           <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
         </div>
 <% end %>
+</div>
 
