--- a/app/assets/stylesheets/comment.css.scss
+++ b/app/assets/stylesheets/comment.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Comment controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.iframe-content {
+    position: relative;
+    width: 100%;
+    padding: 75% 0 0 0;
+}
+
+.iframe-content .movie{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.send_button{
+    width: 20%;
+    height: 20%;
+    font-size:80%;
+    border: 1px solid #000000;
+}
