--- a/app/assets/stylesheets/music.css.scss
+++ b/app/assets/stylesheets/music.css.scss
@@ -8,12 +8,48 @@
     display: block;
 }
 
-.visual {
+.music_img {
     float: left;
+    width: 40%;
+    height: 40%;
+}
+
+.title{
+  text-align: center;
+  margin: 0 auto;
+}
+
+input[type="radio"]{
+   -webkit-transform: scale(3);
+   transform: scale(3);
+   margin-right: 0.5em;
+}
+
+.text_scale2{
+  font-size:200%;
+}
+
+.music_title{
+  width: 60%;
+  height: 60%;
+  font-size:15px;
 }
 
 .input_music  {
-    width:200px;
-    height:100px;
-    font-size:100px;
+    width: 100%;
+    height: 100%;
+    font-size:500%;
+    border: 1px solid #000000;
+}
+
+table{
+  table-layout: fixed;
+  width: 60%;
+}
+
+td{
+  /*border: 1px solid #FF0000;*/
+  text-align: center;
+  margin: 0 auto;
+  font-size:180%;
 }
