--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.iframe-content {
+    position: relative;
+    width: 100%;
+    padding: 75% 0 0 0;
+}
+.iframe-content .movie{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.ranking {
+  font-size: 100%;
+  /*text-align: center;*/
+}
