--- a/app/views/comment/new.html.erb
+++ b/app/views/comment/new.html.erb
@@ -1,6 +1,9 @@
-<h2><%= Music.find(params[:id]).title %>に対するコメント</h2>
+<div class="text_scale2">
 
-<iframe class="movie" allowfullscreen="allowfullscreen" frameborder="0" width="798" height="500" src="http://embed.nicovideo.jp/watch/<%= Music.find(params[:id]).movie_url.split("/")[-1] %>?oldScript=1"></iframe>
+<h2><%= Music.find(params[:id]).title %></h2>
+
+<div class="iframe-content">
+<iframe class="movie" allowfullscreen="allowfullscreen" frameborder="0" width="798" height="500" src="http://embed.nicovideo.jp/watch/<%= Music.find(params[:id]).movie_url.split("/")[-1] %>?oldScript=1"></iframe></div>
 
 <% if @comments.present? %>
   <ul>
@@ -8,7 +11,7 @@
     <li> 
       <div class="clearfix">
       <a href="/comment/<%=comment.id%>/edit" > <%= comment.review %> </a>
-      <%= button_to '削除', "/comment/#{comment.id}", :method => :delete %>
+      <%= button_to '削除', "/comment/#{comment.id}", :method => :delete ,:class => "send_button" %>
       </div>
     </li>
     <br>
@@ -20,14 +23,16 @@
 
 <%= form_tag('/comment', method: :post) do %>
   <label> コメントの追加 </label> <br>
-  <input type="text" name="review" value="" > 
+  <input class="input_text" type="text" name="review" value="" > 
   <input type="hidden" name="user_id" value="<%= current_user.id %>" >
   <input type="hidden" name="music_id" value="<%= params[:id] %>" >
   <br>
-  <input class="input_music" type="submit" value="送信"> 
+  <input class="send_button" type="submit" value="送信"> 
 <% end %>
 
 <br>
 <%= link_to 'トップページへ', '/music' %>
+
+</div>
 
 
