--- a/app/views/comment/create.js.erb
+++ b/app/views/comment/create.js.erb
@@ -1,2 +1,2 @@
 $("#comment").val(""); // 入力フォームを空欄にする処理
-$("ul").html("<%= j(render @comments) %>");
+$('ul').append('<li> <%= @comment.review %> </li>');
