--- a/app/views/music/new.html.erb
+++ b/app/views/music/new.html.erb
@@ -31,7 +31,9 @@
   
   <br>
   <% end %>
-  <input class="input_music" type="submit" value="送信"> 
+  <div class="center">
+    <input class="input_music" type="submit" value="送信"> 
+  </div>
   <% end %>
   <br>
   <%= link_to 'トップページへ', '/music' %>
