--- a/app/assets/stylesheets/music.css.scss
+++ b/app/assets/stylesheets/music.css.scss
@@ -17,7 +17,6 @@
 .center{
   width: 90%;
   margin: auto;
-  border: 1px solid #aaa;
   text-align: center;
 }
 
@@ -48,10 +47,13 @@ input[type="radio"]{
 }
 
 .input_music  {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     font-size:500%;
-    border: 1px solid #000000;
+    color:seagreen;
+    background-color: lightcyan;
+    border: 1px solid gray;
+    -webkit-border-radius: 16px;
 }
 
 table{
