--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,27 +9,27 @@
 <body>
 
 <header class="header">
-    <div class="header__bar row">
-      <h1 class="grid-6"><a href="/">VocaReco</a></h1>
+    <div class="header_bar">
+      <h1 class="grid"><a href="/">VocaReco</a></h1>
       <% if user_signed_in? %>
-        <div class="user_nav grid-6">
+        <div class="grid">
           <%= link_to '評価値入力へ', '/music/new', :class => "post" %>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => "post" %>
         </div>
 
       <% else %>
-        <div class="grid-6">
+        <div class="grid">
           <%= link_to "ログイン", new_user_session_path, :class => 'post' %>
           <%= link_to "新規登録", new_user_registration_path, :class => 'post' %>
         </div>
       <% end %>
     </div>
   </header>
-
+  <div class="main_content">
     <%= yield %>
-
+  </div>
     <footer>
-      <p>
+      <p class="center">
         Copyright VocaReco 2016.
       </p>
     </footer>
