--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
-<div class="text_scale2">
-<h2 class="text_scale2">登録画面</h2>
+<div class="text_scale2 center">
+<h2 class="text_scale2">アカウントを作成</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :ユーザー名 %><br />
+    <%= f.label :ユーザー名 %><br/>
     <%= f.text_field :username, autofocus: true, class: "input_text" %>
   </div>
 
