--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,9 @@
   </div>
   <br>
 <% end %>
-
-<%= link_to '評価値入力へ', '/music/new' %>
+<br>
+<!-- 
+<%= link_to '評価値入力へ', '/music/new' %> -->
+<div class="center">
 <%= link_to 'トップページへ', '/music' %>
+</div>
