--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,24 +1,78 @@
 <h1 class="title"> おすすめボカロ曲診断 </h1>
+
+<br>
+
 <div class="text_scale2 mergin90">
+
+<% if user_signed_in? %>
 <h4> このサイトについて </h4>
 <p class="mergin90"> このサイトは自分の好みに合ったボカロ曲を見つけるためのサイトです。 </p>
+
 <h4> 使い方 </h4>
-<ul class="mergin90">
-<li>評価値入力からボカロ曲に対する評価値を入力します。</li>
-<li>その評価値を元に、オススメの曲が計算されるので、診断結果の閲覧から確認します。</li>
-<li>多くの評価値を入力するほど、精度の良い診断が出来るので、なるべく多く回答してください。</li>
-</ul>
-<% if user_signed_in? %>
-    <div class="center user_nav grid-6"><!-- 
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      <%= link_to '評価値入力へ', '/music/new' %> -->
-      <a class="center" href="/users/<%= current_user.id %>">診断結果の閲覧</a>
-    </div>
-  <% else %>
-    <div class="grid-6">
-      <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-      <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
-    </div>
+<ol class="mergin90">
+<li>ボカロ曲に対する評価値を入力します。</li>
+
+  <div class="music_frame clearfix"> 
+    <img id="music_img" class="music_img" src="<%= @music.image_url %>" alt="Not found."> 
+    <a id="music_title" class="music_title" href="<%= @music.id %>"> <%= @music.title %> </a>
+
+    <%= form_tag('/music', remote: true, method: :post) do %>
+    <input type="hidden" name="music_id" value="<%= @music.id %>" />
+    <table>
+      <tr>
+        <td align="center"> <input type="submit" name="rating" value="大好き"> </td>
+        <td align="center"> <input type="submit" name="rating" value="好き"> </td>
+        <td align="center"> <input type="submit" name="rating" value="知らない"> </td>
+        <td align="center"> <input type="submit" name="rating" value="嫌い"> </td>
+        <td align="center"> <input type="submit" name="rating" value="大嫌い"> </td>
+      </tr>
+    </table>
+    <% end %> 
+  </div>
+
+<br>
+<br>
+
+<li>その評価値を元に、オススメの曲が診断されます。</li>
+
+<br>
+
+<div class="center user_nav grid-6 btn">
+  <a class="center" href="/users/<%= current_user.id %>">診断結果の閲覧</a>
+</div>
+
+<br>
+<br>
+
+<li>多くの評価値を入力するほど精度の良い診断が出来るので、なるべく多く回答してください。</li>
+</ol>
+
+<br>
+    
+<% else %>
+
+<h4> このサイトについて </h4>
+<p class="mergin90"> このサイトは自分の好みに合ったボカロ曲を見つけるためのサイトです。 </p>
+
+<br>
+
+<h4> 使い方 </h4>
+<ol class="mergin90">
+<li>ボカロ曲に対する評価値を入力します。</li>
+<br>
+<li>その評価値を元に、オススメの曲が診断されます。</li>
+<br>
+<li>聞きます。</li>
+<br>
+<li>楽しい！</li>
+<br>
+<li>Let's try↓ </li>
+<br>
+
+<div class="grid-6 center">
+  <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+</div>
 <% end %>
 </div>
 
