--- a/app/views/music/create.js.erb
+++ b/app/views/music/create.js.erb
@@ -2,3 +2,4 @@ $("#music_img").attr("src","<%= @music.image_url %>")
 $("#music_title").attr("href","<%= @music.id %>")
 $("#music_title").html("<%= @music.title %>")
 $("#music_img").attr("src","<%= @music.image_url %>")
+$("#music_id").attr("value","<%= @music.id %>")
