--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
 あなたにオススメの楽曲
 <% @recommends.each_with_index do |recommend,i| %>
+<% music = Music.find(recommend.music_id) %>
   <div class="clearfix"> 
     <!-- <img class="visual" src="<%= recommend.music.image_url %>" alt="Not found.">  -->
     <div class="iframe-content">
-      <iframe class="movie" allowfullscreen="allowfullscreen" frameborder="0" src="http://embed.nicovideo.jp/watch/<%= recommend.music.movie_url.split("/")[-1] %>?oldScript=1"></iframe>
+      <iframe class="movie" allowfullscreen="allowfullscreen" frameborder="0" src="http://embed.nicovideo.jp/watch/<%= music.movie_url.split("/")[-1] %>?oldScript=1"></iframe>
     </div>
     <!-- <p class="ranking"> <%= i+1 %>位：<%= recommend.music.title %></p> -->
-    <a class="music_title" href="/music/<%= recommend.music.id %>"> <%= i+1 %>位： <%= recommend.music.title %> </a>
+    <a class="music_title" href="/music/<%= music.id %>"> <%= i+1 %>位： <%= recommend.music.title %> </a>
   </div>
   <br>
 <% end %>
